[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/wasp-server/WaspServer.gd" type="Script" id=1]
[ext_resource path="res://examples/simple_server/SimpleServer.gd" type="Script" id=2]

[node name="Server" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaspServer" type="Node" parent="."]
script = ExtResource( 1 )

[node name="PanelStart" type="PanelContainer" parent="."]
margin_left = 337.0
margin_top = 272.0
margin_right = 687.0
margin_bottom = 328.0
rect_min_size = Vector2( 350, 0 )

[node name="vbox" type="VBoxContainer" parent="PanelStart"]
margin_left = 7.0
margin_top = 7.0
margin_right = 343.0
margin_bottom = 49.0

[node name="title" type="Label" parent="PanelStart/vbox"]
margin_right = 336.0
margin_bottom = 14.0
text = "Wasp Server example"
align = 1

[node name="hbox" type="HBoxContainer" parent="PanelStart/vbox"]
margin_top = 18.0
margin_right = 336.0
margin_bottom = 42.0
alignment = 1

[node name="port" type="Label" parent="PanelStart/vbox/hbox"]
margin_left = 97.0
margin_top = 5.0
margin_right = 127.0
margin_bottom = 19.0
text = "port:"

[node name="InputPort" type="LineEdit" parent="PanelStart/vbox/hbox"]
margin_left = 131.0
margin_right = 189.0
margin_bottom = 24.0
text = "14445"
placeholder_text = "port"

[node name="ButtonStart" type="Button" parent="PanelStart/vbox/hbox"]
margin_left = 193.0
margin_right = 238.0
margin_bottom = 24.0
text = "Start!"

[node name="PanelListening" type="PanelContainer" parent="."]
margin_left = 112.0
margin_right = 912.0
margin_bottom = 600.0
rect_min_size = Vector2( 800, 600 )

[node name="vbox" type="VBoxContainer" parent="PanelListening"]
margin_left = 7.0
margin_top = 7.0
margin_right = 793.0
margin_bottom = 593.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="PanelListening/vbox"]
margin_right = 786.0
margin_bottom = 14.0
text = "Wasp Server Example"
align = 1

[node name="hbox" type="HBoxContainer" parent="PanelListening/vbox"]
margin_top = 18.0
margin_right = 786.0
margin_bottom = 32.0
alignment = 1

[node name="listening" type="Label" parent="PanelListening/vbox/hbox"]
margin_left = 329.0
margin_right = 445.0
margin_bottom = 14.0
text = "Listening on port: "

[node name="LabelPort" type="Label" parent="PanelListening/vbox/hbox"]
margin_left = 449.0
margin_right = 457.0
margin_bottom = 14.0
text = "0"

[node name="hsplit" type="HSplitContainer" parent="PanelListening/vbox"]
margin_top = 36.0
margin_right = 786.0
margin_bottom = 586.0
size_flags_vertical = 3

[node name="TestFields" type="VBoxContainer" parent="PanelListening/vbox/hsplit"]
margin_right = 220.0
margin_bottom = 550.0
rect_min_size = Vector2( 220, 0 )

[node name="title" type="Label" parent="PanelListening/vbox/hsplit/TestFields"]
margin_right = 220.0
margin_bottom = 14.0
text = "Test fields"

[node name="hsep" type="HSeparator" parent="PanelListening/vbox/hsplit/TestFields"]
margin_top = 18.0
margin_right = 220.0
margin_bottom = 22.0

[node name="text" type="Label" parent="PanelListening/vbox/hsplit/TestFields"]
margin_top = 26.0
margin_right = 220.0
margin_bottom = 40.0
text = "Text:"

[node name="LabelText" type="Label" parent="PanelListening/vbox/hsplit/TestFields"]
margin_top = 44.0
margin_right = 220.0
margin_bottom = 58.0
size_flags_horizontal = 3
text = "unset text"
autowrap = true

[node name="sep2" type="Control" parent="PanelListening/vbox/hsplit/TestFields"]
margin_top = 62.0
margin_right = 220.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 6 )

[node name="number" type="Label" parent="PanelListening/vbox/hsplit/TestFields"]
margin_top = 72.0
margin_right = 220.0
margin_bottom = 86.0
text = "Number:"

[node name="LabelNumber" type="Label" parent="PanelListening/vbox/hsplit/TestFields"]
margin_top = 90.0
margin_right = 220.0
margin_bottom = 104.0
text = "0"

[node name="sep3" type="Control" parent="PanelListening/vbox/hsplit/TestFields"]
margin_top = 108.0
margin_right = 220.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="color" type="Label" parent="PanelListening/vbox/hsplit/TestFields"]
margin_top = 118.0
margin_right = 220.0
margin_bottom = 132.0
text = "Color:"

[node name="RectColor" type="ColorRect" parent="PanelListening/vbox/hsplit/TestFields"]
margin_top = 136.0
margin_right = 220.0
margin_bottom = 168.0
rect_min_size = Vector2( 32, 32 )

[node name="sep4" type="Control" parent="PanelListening/vbox/hsplit/TestFields"]
margin_top = 172.0
margin_right = 220.0
margin_bottom = 178.0
rect_min_size = Vector2( 0, 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connected clients" type="Label" parent="PanelListening/vbox/hsplit/TestFields"]
margin_top = 182.0
margin_right = 220.0
margin_bottom = 196.0
text = "Connected Clients"

[node name="scroll" type="ScrollContainer" parent="PanelListening/vbox/hsplit/TestFields"]
margin_top = 200.0
margin_right = 220.0
margin_bottom = 550.0
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectedClientList" type="VBoxContainer" parent="PanelListening/vbox/hsplit/TestFields/scroll"]
margin_right = 220.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="vbox_clients" type="VBoxContainer" parent="PanelListening/vbox/hsplit"]
margin_left = 232.0
margin_right = 786.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="clients" type="Label" parent="PanelListening/vbox/hsplit/vbox_clients"]
margin_right = 554.0
margin_bottom = 14.0
text = "\"Remote\" Clients"

[node name="hsep" type="HSeparator" parent="PanelListening/vbox/hsplit/vbox_clients"]
margin_top = 18.0
margin_right = 554.0
margin_bottom = 22.0

[node name="ButtonAddClient" type="Button" parent="PanelListening/vbox/hsplit/vbox_clients"]
margin_top = 26.0
margin_right = 554.0
margin_bottom = 46.0
text = "Add Remote Client"

[node name="scrollv" type="ScrollContainer" parent="PanelListening/vbox/hsplit/vbox_clients"]
margin_top = 50.0
margin_right = 554.0
margin_bottom = 550.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="RemoteClientList" type="VBoxContainer" parent="PanelListening/vbox/hsplit/vbox_clients/scrollv"]
margin_right = 554.0
size_flags_horizontal = 3
custom_constants/separation = 4

[node name="DialogError" type="AcceptDialog" parent="."]
margin_left = 412.0
margin_top = 260.0
margin_right = 612.0
margin_bottom = 340.0
rect_min_size = Vector2( 200, 80 )

[node name="DialogErrorLabel" type="RichTextLabel" parent="DialogError"]
margin_left = 8.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 44.0
bbcode_enabled = true
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PanelStart/vbox/hbox/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="PanelListening/vbox/hsplit/vbox_clients/ButtonAddClient" to="." method="_on_ButtonAddClient_pressed"]
[connection signal="meta_clicked" from="DialogError/DialogErrorLabel" to="." method="_on_DialogErrorLabel_meta_clicked"]
